--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "test": "jest && codecov"
+    "test": "jest && codecov --token=def7cd60-99d7-4105-a6cf-f2946f258f0b"
   },
   "devDependencies": {
     "axios": "^0.18",
