--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "axios": "^0.18",
     "babel-jest": "^23.6.0",
+    "codecov": "^3.1.0",
     "jest": "^23.6.0",
     "laravel-mix": "^2.1.14",
     "query-string": "^6.1.0"
